--- a/Server/package.json
+++ b/Server/package.json
@@ -20,12 +20,15 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-cookie": "^4.17.1",
+    "express-mongo-sanitize": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "xss-clean": "^0.1.4"
   }
 }
